First Commit for Pune Conf

--- a/sponsor-deliverables.html
+++ b/sponsor-deliverables.html
@@ -35,7 +35,6 @@
 
         <!-- Logo -->
         <div id="logo">
-            <span class="image avatar48" style="margin-top: -10px"><img src="images/selenium_logo.png" alt="Selenium Logo"></span>
             <h1 id="title"><a href="/" title="Selenium Conference 2014">Selenium Conf'14</a></h1>
             <span class="byline"><i class="fa fa-clock-o"> Sep 4-6th 2014</i></span>
             <span class="byline"><a href="http://www.chanceryhotels.com/pavilion/" target="_blank" class="fa fa-building">
@@ -82,7 +81,7 @@
             <tbody>
             <tr>
                 <td>1</td>
-                <td class="desc">Signed copy of the <strong><a href="/docs/SeConf2014_SponsorshipGuide.pdf">sponsorship pledge form</a></strong></td>
+                <td class="desc">Signed copy of the <strong><a href="/docs/AgilePune2014_SponsorshipGuide.pdf">sponsorship pledge form</a></strong></td>
                 <td>On Sign-up</td>
                 <td>All</td>
             </tr>
@@ -114,34 +113,34 @@
             <tr>
                 <td>6</td>
                 <td class="desc">High-res Company <strong>Logo</strong> for conf bag.Max 2 Color Logo in Vector format (CDR, SVG or PDF)</td>
-                <td>July 25th</td>
-                <td>Selenium &amp; Conference Bag Sponsors</td>
+                <td>Oct 15th</td>
+                <td>Title &amp; Conference Bag Sponsors</td>
             </tr>
             <tr>
                 <td>7</td>
                 <td class="desc">High-res Company <strong>Logo</strong> for conf TShirt. In Vector format (CDR, SVG or PDF.) To be printed in white on black tshirt</td>
-                <td>July 25th</td>
-                <td>Selenium and TShirt sponsors</td>
+                <td>Oct 15th</td>
+                <td>Title and TShirt sponsors</td>
             </tr>
             <tr>
                 <td>8</td>
                 <td class="desc">High-res Company <strong>Logo</strong> for banners <br>Max 2 Color Logo in Vector format <br>(CDR, SVG or PDF)
                 </td>
-                <td>Aug 1st</td>
+                <td>Oct 30th</td>
                 <td>All</td>
             </tr>
             <tr>
                 <td>9</td>
                 <td class="desc"><strong>Program Guide Ad</strong> (1 A4 Page PNG Images)
                 <br><a href="http://agileindia.org/uploads/downloads/AgileIndia2014_ProgramGuide_Full.pdf" target="_blank">Check sample from Agile India 2014 Conf</a></td>
-                <td>Aug 1st</td>
+                <td>Oct 30th</td>
                 <td>One-side A4 Page - All</td>
             </tr>
             <tr>
                 <td>10</td>
                 <td class="desc"><strong>Approval for Bag Inserts</strong> (Literature or SWAG) - All sponsors need approval before sending the material to us.</td>
-                <td>Aug 15th</td>
-                <td>Please email sponsors@seleniumconf.org the scanned copy.</td>
+                <td>Nov 5th</td>
+                <td>Please email naresh@agileindia.org the scanned copy.</td>
             </tr>
             <tr>
                 <td>11</td>
@@ -149,17 +148,17 @@
                         Bengaluru - 560002, India<br>
                         Ph No: +91 80 41244690, 22245307
                 </td>
-                <td>Aug 21st</td>
-                <td>1 Page = A4 Page, 2-sides<br>Selenium - Max 6 Pages <br>Platinum - Max 4 Pages <br>Gold - Max 3 Pages <br>Track - Max 2 Pages
+                <td>Nov 10th</td>
+                <td>1 Page = A4 Page, 2-sides<br>Title - Max 6 Pages <br>Gold - Max 3 Pages <br>Track - Max 2 Pages
                 </td>
             </tr>
             <tr>
                 <td>12</td>
                 <td class="desc">Fully formatted <strong>email message</strong> to be sent to all the participants. <br>(Option to send the email before or after the conference.)
                 </td>
-                <td>Before <br>Aug 15th <br>OR <br>After <br>Sep 7th
+                <td>Before <br>Nov 15th <br>OR <br>After <br>Nov 27th
                 </td>
-                <td>Selenium, Platinum and Gold</td>
+                <td>Title and Gold</td>
             </tr>
             </tbody>
         </table>
@@ -169,9 +168,9 @@
 <section id="important-dates" class="two">
     <div class="container">
         <header><h2 class="major"><span>Important Dates</span></h2></header>
-        <iframe src="https://www.google.com/calendar/embed?title=Selenium%20Conf%202014%20Sponsor%20Deliverable%20Important%20Dates&amp;showPrint=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=slr296ecsc9ms8rnk21bbnpqe0%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=Asia%2FCalcutta" style="border-width: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://www.google.com/calendar/embed?title=Agile%20Pune%202014%20Sponsor%20Deliverable%20Important%20Dates&amp;showPrint=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=m9l0tuhlakstmmfg744gj61d4o%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=Asia%2FCalcutta" style="border-width: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         <footer style="margin-top: 10px">
-            <a href="https://www.google.com/calendar/embed?src=slr296ecsc9ms8rnk21bbnpqe0%40group.calendar.google.com&ctz=Asia/Calcutta" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Subscribe to this Calendar</span></a>
+            <a href="https://www.google.com/calendar/embed?src=m9l0tuhlakstmmfg744gj61d4o%40group.calendar.google.com&ctz=Asia/Calcutta" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Subscribe to this Calendar</span></a>
         </footer>
     </div>
 </section>
@@ -179,11 +178,11 @@
     <section id="stall-layout" class="one">
         <div class="container">
             <header><h2 class="major"><span>Stall Layout</span></h2></header>
-            <img src="/images/sponsors/stalls/stall_layout.png">
-            <p>Stalls will be operation from <strong>9:00 AM to 5:30 PM</strong> on <strong>Sep 5th and 6th</strong>.</p>
-            <p><span style="text-decoration: underline;"><strong>Note</strong></span>: Your stalls will be setup on Sep 4th late night (11:00 PM onwards) and will be handed over to you on <span style="text-decoration: underline;"><strong>Sep 5th 7:30 AM</strong></span> for any additional setup.</p>
+            <h3>Coming Soon...</h3>
+            <p>Stalls will be operation from <strong>9:00 AM to 5:30 PM</strong> on <strong>Nov 20th and 21st</strong>.</p>
+            <p><span style="text-decoration: underline;"><strong>Note</strong></span>: Your stalls will be setup on Nov 19th late night (11:00 PM onwards) and will be handed over to you on <span style="text-decoration: underline;"><strong>Nov 20th 7:30 AM</strong></span> for any additional setup.</p>
             <footer style="margin-top: 10px">
-                <a href="mailto:sponsors@seleniumconf.org?subject=[SeConf] Stall Slot Sign-up"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Grab Your Stall Slot</span></a>
+                <a href="mailto:naresh@agileindia.org?subject=[Agile Pune 2014] Stall Slot Sign-up"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Grab Your Stall Slot</span></a>
             </footer>
         </div>
     </section>
@@ -234,7 +233,7 @@
                 <li>11) Visitor Book - Rs.475/- Inclusive of all taxes per book per day</li>
             </ul>
             <footer style="margin-top: 10px">
-                <a href="mailto:sponsors@seleniumconf.org?subject=[SeConf] Stall More Info"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">More Info</span></a>
+                <a href="mailto:naresh@agileindia.org?subject=[SeConf] Stall More Info"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">More Info</span></a>
             </footer>
         </div>
     </section>
