Hyper-link Keynote speaker's name

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <article class="item">
                         <a href="http://www.industriallogic.com/people/joshua" target="_blank" class="image avatar150"><img src="images/speakers/JoshuaKerievsky.png" alt="Joshua Kerievsky" title="Joshua Kerievsky" /></a>
                         <header>
-                            <h3>Joshua Kerievsky</h3>
+                            <h3><a href="http://www.industriallogic.com/people/joshua" target="_blank">Joshua Kerievsky</a></h3>
                         </header>
                     </article>
                 </div>
@@ -117,7 +117,7 @@
                     <article class="item">
                         <a href="http://www.lindarising.org/" target="_blank" class="image avatar150"><img src="images/speakers/LindaRising.png" alt="Linda Rising" title="Linda Rising" /></a>
                         <header>
-                            <h3>Linda Rising</h3>
+                            <h3><a href="http://www.lindarising.org/" target="_blank">Linda Rising</a></h3>
                         </header>
                     </article>
                 </div>
