Removed SeConf specific stuff

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><a href="https://www.facebook.com/agileindia" target="_blank" class="fa fa-facebook solo"><span>Facebook</span></a></li>
             <li><a href="https://www.youtube.com/user/AgileIndia2012" target="_blank" class="fa fa-youtube solo"><span>YouTube</span></a></li>
             <li><a href="http://www.slideshare.net/agileindia" target="_blank" class="fa fa-desktop solo"><span>SlideShare</span></a></li>
-            <li><a href="mailto:naresh@agileindia.org?subject=SeConf 2014 Info" class="fa fa-envelope solo"><span>Email</span></a></li>
+            <li><a href="mailto:naresh@agileindia.org?subject=Agile Pune 2014 Info" class="fa fa-envelope solo"><span>Email</span></a></li>
         </ul>
 
     </div>
@@ -200,7 +200,7 @@
                 <h2>Speakers</h2>
             </header>
             <h3>Call for Proposals</h3>
-            <p>Interested in presenting at SeConf 14? The <a href="http://confengine.com/agile-pune-2014" target="_blank">public proposal submission system</a> is live now!</p>
+            <p>Interested in presenting at Agile Pune 14? The <a href="http://confengine.com/agile-pune-2014" target="_blank">public proposal submission system</a> is live now!</p>
             <h3>REVIEW PROCESS</h3>
             <p>Interested speakers are requested to submit their proposals directly on our <a href="http://confengine.com/agile-pune-2014" target="_blank">proposal submission system</a>.
                 All proposals will be public. Registered user of the submission system will be able to comment on your proposal. Submitters may also post comments on reviews or public comments of their own proposals to provide clarifications, explain revisions and respond to questions. Comments by public users are information that can be utilized by both the submitter and the review team. Ultimately the decision to accept a session resides with the program team, the program chair, and the conference chair.</p>
