--- a/sponsor-deliverables.html
+++ b/sponsor-deliverables.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Sponsor Deliverables - SeConf 2014 - 4th Annual Selenium Conference | The Future of Testing and Test Automation</title>
+    <title>Agile Pune 2014 | Premier Conference on Agile, Scrum, eXtreme Programming, Kanban and Lean Software Development</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta name="description" content="4th Annual Selenium Conference Sponsor Deliverables"/>
-    <meta name="keywords" content="Selenium, Testing, Automation, Test Automation, Testing Framework"/>
+    <meta name="description" content="Agile Pune 2014 is a premier conference on Agile, Scrum, eXtreme Programming, Kanban and Lean Software Development. Organiser by the Agile Software Community of India"/>
+    <meta name="keywords" content="Agile, Scrum, Lean, eXtreme Programming, XP, Kanban, Patterns"/>
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600" rel="stylesheet" type="text/css"/>
     <!--[if lte IE 8]>
     <script src="js/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/ie9.css"/><![endif]-->
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="css/ie8.css"/><![endif]-->
-    <link rel='index' title='Selenium Conference 2014' href='index.html' />
+    <link rel='index' title='Agile Pune 2014 Conference' href='index.html' />
     <link rel='prev' title='Home' href='/' />
     <link rel='next' title='Sponsor Deliverable' href='#deliverables' />
     <link rel='canonical' href='index.html' />
@@ -35,10 +35,10 @@
 
         <!-- Logo -->
         <div id="logo">
-            <h1 id="title"><a href="/" title="Selenium Conference 2014">Selenium Conf'14</a></h1>
-            <span class="byline"><i class="fa fa-clock-o"> Sep 4-6th 2014</i></span>
-            <span class="byline"><a href="http://www.chanceryhotels.com/pavilion/" target="_blank" class="fa fa-building">
-                &nbsp;Hotel Chancery Pavilion, Bangalore</a></span>
+            <h1 id="title"><a href="/" title="Agile Pune Conference 2014">Agile Pune Conf'14</a></h1>
+            <span class="byline"><i class="fa fa-clock-o"> Nov 21-22 2014</i></span>
+            <span class="byline"><a href="http://pune.regency.hyatt.com/en/hotel/home.html" target="_blank" class="fa fa-building">
+                &nbsp;Hyatt Regency, Pune</a></span>
         </div>
 
         <!-- Nav -->
@@ -58,10 +58,11 @@
 
         <!-- Social Icons -->
         <ul class="icons">
-            <li><a href="https://twitter.com/seleniumconf" target="_blank" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-            <li><a href="https://www.youtube.com/user/seleniumconf" target="_blank" class="fa fa-youtube solo"><span>YouTube</span></a></li>
-            <li><a href="http://www.slideshare.net/seleniumconf" target="_blank" class="fa fa-desktop solo"><span>SlideShare</span></a></li>
-            <li><a href="mailto:info@seleniumconf.org?subject=SeConf 2014 Info" class="fa fa-envelope solo"><span>Email</span></a></li>
+            <li><a href="https://twitter.com/agileindia" target="_blank" class="fa fa-twitter solo"><span>Twitter</span></a></li>
+            <li><a href="https://www.facebook.com/agileindia" target="_blank" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+            <li><a href="https://www.youtube.com/user/AgileIndia2012" target="_blank" class="fa fa-youtube solo"><span>YouTube</span></a></li>
+            <li><a href="http://www.slideshare.net/agileindia" target="_blank" class="fa fa-desktop solo"><span>SlideShare</span></a></li>
+            <li><a href="mailto:naresh@agileindia.org?subject=Agile Pune 2014 Info" class="fa fa-envelope solo"><span>Email</span></a></li>
         </ul>
 
     </div>
@@ -107,7 +108,7 @@
                 <td>5</td>
                 <td class="desc"><strong>Your Organisation Description</strong> that needs to be uploaded on the conference website</td>
                 <td>On Payment</td>
-                <td>200 words - Selenium &amp; Platinum <br>100 words - All other sponsors <br>50 words - Track sponsor
+                <td>200 words - Title &amp; Gold <br>100 words - All other sponsors <br>50 words - Track sponsor
                 </td>
             </tr>
             <tr>
@@ -193,7 +194,7 @@
             <p>As part of the sponsorship, the conference will be giving a plain Octanorm stall with 2 spot lights, one table and 2 chairs.</p>
             <p><img src="/images/sponsors/stalls/both_stalls.jpg" alt="Stalls"></p>
             <p>However if you would like to design and fabricate your stall as per your exact branding needs, we would request you to work directly with our Event Management Company <br>(contact details will be published shortly.)</p>
-            <h3>Selenium Sponsor Stall Fabrication Rates</h3>
+            <h3>Title Sponsor Stall Fabrication Rates</h3>
             <div>
                 <p>3 x 2 Meter - Backdrop wall + 1 Side Wall + Fascia + Table  Branding - Rs. <strong>17096</strong>/- Inclusive of all taxes</p>
                 <ul>
@@ -233,7 +234,7 @@
                 <li>11) Visitor Book - Rs.475/- Inclusive of all taxes per book per day</li>
             </ul>
             <footer style="margin-top: 10px">
-                <a href="mailto:naresh@agileindia.org?subject=[SeConf] Stall More Info"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">More Info</span></a>
+                <a href="mailto:naresh@agileindia.org?subject=[Agile Pune 2014] Stall More Info"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">More Info</span></a>
             </footer>
         </div>
     </section>
