--- a/index.html
+++ b/index.html
@@ -146,35 +146,35 @@
                     <td>1. Super Early Bird</td>
                     <td>June 23rd</td>
                     <td>25</td>
-                    <td>3,000 Rs.</td>
+                    <td>3,500 Rs.</td>
                 </tr>
                 <tr>
                     <td>2. Early Bird</td>
                     <td>July 15th</td>
                     <td>50</td>
-                    <td>4,000 Rs.</td>
+                    <td>5,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>3. Smart</td>
                     <td>Aug 1st</td>
                     <td>100</td>
-                    <td>5,000 Rs.</td>
+                    <td>7,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>4. Regular</td>
-                    <td>Sep 15th</td>
+                    <td>Sep 1st</td>
                     <td>100</td>
-                    <td>7,000 Rs.</td>
+                    <td>9,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>5. Late</td>
                     <td>Oct 1st</td>
                     <td>75</td>
-                    <td>10,000 Rs.</td>
+                    <td>12,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>6. Last Minute</td>
-                    <td>Oct 15th</td>
+                    <td>Nov 1st</td>
                     <td>50</td>
                     <td>15,000 Rs.</td>
                 </tr>
