pushed registration start date to 24th June

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </tr>
                 <tr>
                     <td>1. Super Early Bird</td>
-                    <td>June 23rd</td>
+                    <td>June 24th</td>
                     <td>25</td>
                     <td>3,500 Rs.</td>
                 </tr>
