showing AgilePune Logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 
         <!-- Logo -->
         <div id="logo">
-            <h1 id="title"><a href="/" title="Agile Pune Conference 2014">Agile Pune Conf'14</a></h1>
+            <h1 id="title">
+                <span class="image" style="width: 48px"><img src="/images/agilepune2014_small.png" alt="Agile Pune 2014 Logo"></span>
+                <a href="/" title="Agile Pune Conference 2014">Agile Pune 2014</a>
+            </h1>
             <span class="byline"><i class="fa fa-clock-o"> Nov 21-22 2014</i></span>
             <span class="byline"><a href="http://pune.regency.hyatt.com/en/hotel/home.html" target="_blank" class="fa fa-building">
                 &nbsp;Hyatt Regency, Pune</a></span>
