Super Early Bird slab is sold out

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <td><strong># of Seats</strong></td>
                     <td><strong>Conference Pass<br></strong></td>
                 </tr>
-                <tr>
+                <tr style="text-decoration: line-through">
                     <td>1. Super Early Bird</td>
                     <td>June 24th</td>
                     <td>25</td>
