added Steve Freeman as a keynote speaker

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                 <h2>Keynote Speakers</h2>
             </header>
             <div class="row">
-                <div class="3u">&nbsp;</div>
-                <div class="3u">
+                <div class="4u">
                     <article class="item">
                         <a href="http://www.industriallogic.com/people/joshua" target="_blank" class="image avatar150"><img src="images/speakers/JoshuaKerievsky.png" alt="Joshua Kerievsky" title="Joshua Kerievsky" /></a>
                         <header>
@@ -116,7 +115,7 @@
                         </header>
                     </article>
                 </div>
-                <div class="3u">
+                <div class="4u">
                     <article class="item">
                         <a href="http://www.lindarising.org/" target="_blank" class="image avatar150"><img src="images/speakers/LindaRising.png" alt="Linda Rising" title="Linda Rising" /></a>
                         <header>
@@ -124,7 +123,14 @@
                         </header>
                     </article>
                 </div>
-                <div class="3u">&nbsp;</div>
+                <div class="4u">
+                    <article class="item">
+                        <a href="http://www.higherorderlogic.com/about/" target="_blank" class="image avatar150"><img src="images/speakers/SteveFreeman.png" alt="Steve Freeman" title="Steve Freeman" /></a>
+                        <header>
+                            <h3><a href="http://www.higherorderlogic.com/about/" target="_blank">Steve Freeman</a></h3>
+                        </header>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
