added tentative program Schedule

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <ul>
                 <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
                 <li><a href="#keynote-speakers" id="keynote-speakers-link" class="skel-panels-ignoreHref"><span class="fa fa-user">Keynote Speakers</span></a></li>
+                <li><a href="#program" id="program-link" class="skel-panels-ignoreHref"><span class="fa fa-calendar">Program</span></a></li>
                 <li><a href="#register" id="register-link" class="skel-panels-ignoreHref"><span class="fa fa-ticket">Register</span></a></li>
                 <li><a href="#speakers" id="speakers-link" class="skel-panels-ignoreHref"><span class="fa fa-microphone">Speakers</span></a></li>
                 <li><a href="#important-dates" id="important-dates-link" class="skel-panels-ignoreHref"><span class="fa fa-clock-o">Important Dates</span></a></li>
@@ -135,8 +136,215 @@
         </div>
     </section>
 
+    <section id="program" class="three">
+    <h2 class="major"><span>Tentative Program</span></h2>
+    <div style="width: 80%; margin: auto">
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <td colspan="3">
+                    <h3>Pre-Conference Workshop - Wednesday, Nov 19th &amp; Thursday, Nov 20th (Tentative)</h3>
+                </td>
+            </tr>
+            <tr>
+                <th>Sl. No.</th>
+                <th>Timing</th>
+                <th>Workshop</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>1</td>
+                <td rowspan="4">10:00 AM - 6:00 PM</td>
+                <td><a href="https://elearning.industriallogic.com/gh/submit?Action=AlbumContentsAction&album=designPatternsBoxSet&devLanguage=Java" target="_blank">Refactoring to Patterns</a> by Joshua Kerievsky</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td><a href="http://agilefaqs.com/services/training/crafting-out-mvps" target="_blank">Crafting out MVPs</a> by <a href="http://nareshjain.com/about" target="_blank">Naresh Jain</a></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Workshop by Linda Rising</td>
+            </tr>
+            </tbody>
+        </table>
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <td colspan="4"><h3>Agile Pune Conf - Day 1 - Friday, Nov 21th</h3></td>
+            </tr>
+            <tr>
+                <th style="width: 19%">Time</th>
+                <th style="width: 27%">Track 1</th>
+                <th style="width: 27%">Track 2</th>
+                <th style="width: 27%">Track 3</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>08:30-09:00 AM</td>
+                <td colspan="3">Registration</td>
+            </tr>
+            <tr>
+                <td>09:00-10:00 AM</td>
+                <td colspan="3">Keynote by Joshua Kerievsky</td>
+            </tr>
+            <tr>
+                <td>10:00-10:15 AM</td>
+                <td colspan="3">Welcome Address</td>
+            </tr>
+            <tr>
+                <td>10:15-10:30 AM</td>
+                <td colspan="3">Coffee/Tea Break</td>
+            </tr>
+            <tr>
+                <td>10:30-11:15 AM</td>
+                <td>Expert Talk 1</td>
+                <td>Demo Session 1</td>
+                <td>Mini-Workshop 1</td>
+            </tr>
+            <tr>
+                <td>11:15-11:30 AM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>11:30-12:15 PM</td>
+                <td>Expert Talk 2</td>
+                <td>Case Study 1</td>
+                <td>Mini-Workshop 1...</td>
+            </tr>
+            <tr>
+                <td>12:15-01:30 PM</td>
+                <td colspan="3">Lunch Break</td>
+            </tr>
+            <tr>
+                <td>01:30-02:15 PM</td>
+                <td>Expert Talk 3</td>
+                <td>Experience Report 1 &amp; 2</td>
+                <td>Mini-Workshop 2</td>
+            </tr>
+            <tr>
+                <td>02:15-02:30 PM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>02:30-03:15 PM</td>
+                <td>Expert Talk 4</td>
+                <td>Case Study 2</td>
+                <td>Mini-Workshop 2...</td>
+            </tr>
+            <tr>
+                <td>03:15-03:30 PM</td>
+                <td colspan="3">Coffee/Tea Break</td>
+            </tr>
+            <tr>
+                <td>03:30-04:15 PM</td>
+                <td>Expert Talk 5</td>
+                <td>Experience Report 3 &amp; 4</td>
+                <td>Lightning Talks</td>
+            </tr>
+            <tr>
+                <td>04:15-04:30 PM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>04:30-05:30 PM</td>
+                <td colspan="3">Keynote by Steve Freeman</td>
+            </tr>
+            <tr>
+                <td>05:30-05:45 PM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>05:45-07:00 PM</td>
+                <td colspan="3">Open Q &amp; A with a Speaker Panel</td>
+            </tr>
+            <tr>
+                <td>07:00-10:00 PM</td>
+                <td colspan="3">Networking, Social Events &amp; Dinner</td>
+            </tr>
+
+            <tr>
+                <td colspan="4"><h3>Agile Pune Conf - Day 2 - Saturday, Nov 21st</h3></td>
+            </tr>
+
+            <tr>
+                <td>09:00-10:00 AM</td>
+                <td colspan="3">Keynote by Linda Rising</td>
+            </tr>
+            <tr>
+                <td>10:00-10:10 AM</td>
+                <td colspan="3">Important Announcements</td>
+            </tr>
+            <tr>
+                <td>10:10-10:30 AM</td>
+                <td colspan="3">Coffee/Tea Break</td>
+            </tr>
+            <tr>
+                <td>10:30-11:15 AM</td>
+                <td>Expert Talk 6</td>
+                <td>Demo Session 2</td>
+                <td>Mini-Workshop 3</td>
+            </tr>
+            <tr>
+                <td>11:15-11:30 AM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>11:30-12:15 PM</td>
+                <td>Expert Talk 7</td>
+                <td>Case Study 3</td>
+                <td>Mini-Workshop 3...</td>
+            </tr>
+            <tr>
+                <td>12:15-01:30 PM</td>
+                <td colspan="3">Lunch Break</td>
+            </tr>
+            <tr>
+                <td>01:30-02:15 PM</td>
+                <td>Expert Talk 8</td>
+                <td>Experience Report 5 &amp; 6</td>
+                <td>Mini-Workshop 4</td>
+            </tr>
+            <tr>
+                <td>02:15-02:30 PM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>02:30-03:15 PM</td>
+                <td>Expert Talk 9</td>
+                <td>Case Study 4</td>
+                <td>Mini-Workshop 4...</td>
+            </tr>
+            <tr>
+                <td>03:15-03:30 PM</td>
+                <td colspan="3">Coffee/Tea Break</td>
+            </tr>
+            <tr>
+                <td>03:30-04:15 PM</td>
+                <td>Expert Talk 10</td>
+                <td>Experience Report 7 &amp; 8</td>
+                <td>Lightning Talks</td>
+            </tr>
+            <tr>
+                <td>04:15-04:30 PM</td>
+                <td colspan="3">Break</td>
+            </tr>
+            <tr>
+                <td>04:30-05:30 PM</td>
+                <td colspan="3"><a href="http://en.wikipedia.org/wiki/Fishbowl_(conversation)" target="_blank">Fish Bowl</a></td>
+            </tr>
+            <tr>
+                <td>05:30-06:00 PM</td>
+                <td colspan="3">Closing Talk</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    </section>
+
     <!-- Register -->
-    <section id="register" class="three">
+    <section id="register" class="four">
         <div class="container">
 
             <header>
