--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <thead>
             <tr>
                 <td colspan="3">
-                    <h3>Pre-Conference Workshop - Wednesday, Nov 19th &amp; Thursday, Nov 20th (Tentative)</h3>
+                    <h3>Pre-Conference Workshop - Nov 19th &amp; 20th (Tentative)</h3>
                 </td>
             </tr>
             <tr>
