--- a/index.html
+++ b/index.html
@@ -403,6 +403,8 @@
 
             <p>Additionally, we also have exciting pre-conference tutorials on Nov 19th and 20th from our top-notch speakers. Registration for these tutorials is separate from the actual conference registration. You can pay and register for specific tutorials. Tutorials will be announced soon...</p>
 
+            <p><span style="font-size: 0.9em;"><em>For name change, cancellation/refund policy, please check the <a href="http://booking.agilefaqs.com/terms_and_conditions" target="_blank">online registration's terms &amp; conditions</a>.</em></span></p>
+
             <footer>
                 <a href="http://booking.agilefaqs.com/agile-pune-2014" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register Online!</span></a>
             </footer>
