--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
-                <td colspan="4"><h3>Agile Pune Conf - Day 1 - Friday, Nov 21th</h3></td>
+                <td colspan="4"><h3>Agile Pune Conf - Day 1 - Friday, Nov 21st</h3></td>
             </tr>
             <tr>
                 <th style="width: 19%">Time</th>
@@ -265,7 +265,7 @@
             </tr>
 
             <tr>
-                <td colspan="4"><h3>Agile Pune Conf - Day 2 - Saturday, Nov 21st</h3></td>
+                <td colspan="4"><h3>Agile Pune Conf - Day 2 - Saturday, Nov 22nd</h3></td>
             </tr>
 
             <tr>
