--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
         <nav id="nav">
             <ul>
                 <li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
-                <li><a href="#keynote-speakers" id="keynote-speakers-link" class="skel-panels-ignoreHref"><span class="fa fa-user">Keynote Speakers</span></a></li>
+                <li><a href="#keynote-speakers" id="keynote-speakers-link" class="skel-panels-ignoreHref"><span class="fa fa-user-md">Keynote Speakers</span></a></li>
                 <li><a href="#program" id="program-link" class="skel-panels-ignoreHref"><span class="fa fa-calendar">Program</span></a></li>
                 <li><a href="#register" id="register-link" class="skel-panels-ignoreHref"><span class="fa fa-ticket">Register</span></a></li>
                 <li><a href="#speakers" id="speakers-link" class="skel-panels-ignoreHref"><span class="fa fa-microphone">Speakers</span></a></li>
                 <li><a href="#important-dates" id="important-dates-link" class="skel-panels-ignoreHref"><span class="fa fa-clock-o">Important Dates</span></a></li>
                 <li><a href="#sponsors" id="sponsors-link" class="skel-panels-ignoreHref"><span class="fa fa-gift">Sponsors</span></a></li>
+                <li><a href="#organisers" id="organisers-link" class="skel-panels-ignoreHref"><span class="fa fa-user">Organisers</span></a></li>
                 <li><a href="#venue" id="venue-link" class="skel-panels-ignoreHref"><span class="fa fa-building">Venue</span></a></li>
                 <li><a href="#speakers"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Call for Proposals</span></a></li>
             </ul>
@@ -137,19 +138,20 @@
     </section>
 
     <section id="program" class="three">
-    <h2 class="major"><span>Tentative Program</span></h2>
+    <h2 class="major"><span>Conference Program</span></h2>
     <div style="width: 80%; margin: auto">
         <table class="table table-striped table-bordered">
             <thead>
             <tr>
-                <td colspan="3">
-                    <h3>Pre-Conference Workshop - Nov 19th &amp; 20th (Tentative)</h3>
+                <td colspan="4">
+                    <h3>Pre-Conference Workshop - Nov 19th &amp; 20th</h3>
                 </td>
             </tr>
             <tr>
                 <th>Sl. No.</th>
                 <th>Timing</th>
                 <th>Workshop</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -157,14 +159,17 @@
                 <td>1</td>
                 <td rowspan="4">10:00 AM - 6:00 PM</td>
                 <td><a href="https://elearning.industriallogic.com/gh/submit?Action=AlbumContentsAction&album=designPatternsBoxSet&devLanguage=Java" target="_blank">Refactoring to Patterns</a> by Joshua Kerievsky</td>
+                <td><a href="http://booking.agilefaqs.com/selenium-conf-2014#workshop-56-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             <tr>
                 <td>2</td>
                 <td><a href="http://agilefaqs.com/services/training/crafting-out-mvps" target="_blank">Crafting out MVPs</a> by <a href="http://nareshjain.com/about" target="_blank">Naresh Jain</a></td>
+                <td><a href="http://booking.agilefaqs.com/selenium-conf-2014#workshop-57-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Workshop by Linda Rising</td>
+                <td><a href="http://www.fearlesschangepatterns.com/" target="_blank">Fearless Change: Patterns for Introducing New Ideas</a> by <a href="http://www.lindarising.org/" target="_blank">Linda Rising</a></td>
+                <td><a href="http://booking.agilefaqs.com/selenium-conf-2014#workshop-58-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             </tbody>
         </table>
@@ -401,7 +406,7 @@
 
             <h3><a href="http://booking.agilefaqs.com/agile-pune-2014#workshops" target="_blank">Pre-Conference Tutorials</a></h3>
 
-            <p>Additionally, we also have exciting pre-conference tutorials on Nov 19th and 20th from our top-notch speakers. Registration for these tutorials is separate from the actual conference registration. You can pay and register for specific tutorials. Tutorials will be announced soon...</p>
+            <p>Additionally, we also have exciting pre-conference tutorials on Nov 19th and 20th from our top-notch speakers. Registration for these tutorials is separate from the actual conference registration. You can pay and register for specific tutorials.</p>
 
             <p><span style="font-size: 0.9em;"><em>For name change, cancellation/refund policy, please check the <a href="http://booking.agilefaqs.com/terms_and_conditions" target="_blank">online registration's terms &amp; conditions</a>.</em></span></p>
 
@@ -510,6 +515,78 @@
             <footer>
                 <a href="/docs/AgilePune2014_SponsorshipGuide.pdf"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Download Sponsorship Guide</span></a>
             </footer>
+        </div>
+    </section>
+
+    <!-- organisers -->
+    <section id="organisers" class="four">
+        <div class="container">
+            <header>
+                <h2>Organising Team</h2>
+            </header>
+            <div class="row">
+                <div class="3u">
+                    <article class="item">
+                        <a href="http://confengine.com/user/ravi-kumar" target="_blank" class="avatar">
+                            <img src="http://www.gravatar.com/avatar/05f75bce9f2e4e229f586e2b1a36c9d1?s=150&d=mm" alt="Ravi Kumar" title="Ravi Kumar"/>
+                        </a>
+                        <header>
+                            <h3>Ravi Kumar</h3>
+                        </header>
+                    </article>
+                </div>
+                <div class="3u">
+                    <article class="item">
+                        <a href="http://www.sadalage.com/" target="_blank" class="avatar">
+                            <img src="http://www.gravatar.com/avatar/726c66294f0b6a071bb95458344ccfff?s=150&d=mm" alt="Pramod Sadalage" title="Pramod Sadalage"/>
+                        </a>
+                        <header>
+                            <h3>Pramod Sadalage</h3>
+                        </header>
+                    </article>
+                </div>
+                <div class="3u">
+                    <article class="item">
+                        <a href="http://nareshjain.com" target="_blank" class="avatar">
+                            <img src="http://www.gravatar.com/avatar/c86b1c950ce1088c2065c1e222db47fe?s=150&d=mm" alt="Naresh Jain" title="Naresh Jain"/>
+                        </a>
+                        <header>
+                            <h3>Naresh Jain</h3>
+                        </header>
+                    </article>
+                </div>
+                <div class="3u">
+                    <article class="item">
+                        <a href="http://confengine.com/user/tathagat-varma" target="_blank" class="avatar">
+                            <img src="http://www.gravatar.com/avatar/bdd1fd492efd673ba6a5342cf9ec5df2?s=150" alt="Tathagat Varma" title="Tathagat Varma"/>
+                        </a>
+                        <header>
+                            <h3>Tathagat Varma</h3>
+                        </header>
+                    </article>
+                </div>
+            </div>
+            <div class="row">
+                <div class="3u">
+                    <article class="item">
+                        <a href="https://www.linkedin.com/in/dhavaldalal" target="_blank" class="avatar">
+                            <img src="https://avatars3.githubusercontent.com/u/2656650?s=150" alt="Dhaval Dalal" title="Dhaval Dalal"/>
+                        </a>
+                        <header>
+                            <h3>Dhaval Dalal</h3>
+                        </header>
+                    </article>
+                </div>
+                <div class="3u">
+                    <article class="item">
+                        <a href="http://confengine.com/user/anand-bagmar" target="_blank" class="avatar">
+                            <img src="http://www.gravatar.com/avatar/0517b6bacaa5d31d999fe2a4bb0979a7?s=150&r=pg&d=monsterid" alt="Anand Bagmar" title="Anand Bagmar" /></a>
+                        <header>
+                            <h3>Anand Bagmar</h3>
+                        </header>
+                    </article>
+                </div>
+            </div>
         </div>
     </section>
 
